k8s/gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: testgwapi-global-external-managed
  namespace: default
  annotations:
    networking.gke.io/certmap: rideshare
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
  addresses:
  - type: NamedAddress
    value: rideshare-ip
